--- a/style/event.scss
+++ b/style/event.scss
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
     .content {
         flex: 1;
-        min-width: 400px;
+        flex-basis: 400px;
         margin-top: 5px;
     }
 }
