--- a/style/main.scss
+++ b/style/main.scss
@@ -2,6 +2,7 @@
 @import 'reset';
 @import 'bio';
 @import 'event';
+@import 'menu-bar';
 
 @import 'common';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Slab|Spectral|Work+Sans');
@@ -40,16 +41,4 @@ a {
 h1 {
     font-size: 1.25em;
     margin: 0;
-}
-
-.menu-bar {
-    height: 2.5em;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4), 0 6px 6px rgba(0, 0, 0, 0.5);;
-    background: #dddddd;
-    position: relative;
-    z-index: 2;
-}
-
-.wrapper {
-    position: relative;
 }
