--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);@import url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Slab|Spectral|Work+Sans);/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -389,43 +389,195 @@ template {
 [hidden] {
   display: none; }
 
-.bio img {
-  width: 25%;
-  border-radius: 50%;
-  float: right;
-  shape-outside: circle(); }
+.content, .bio .description {
+  letter-spacing: .02em;
+  line-height: 1.4em; }
 
-.bio .description {
-  text-align: justify;
+.bio-block {
+  background-color: #392e2e;
+  color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  padding: 20px 0;
+  position: relative;
+  z-index: 1; }
+
+.bio {
   display: inline-block;
-  width: 50%; }
+  display: flex;
+  flex-wrap: wrap-reverse;
+  position: relative; }
+  .bio .pic {
+    flex: 1;
+    width: 100%;
+    position: relative;
+    align-self: center; }
+  .bio img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px; }
+  .bio .description {
+    display: flex;
+    flex-direction: column;
+    flex: 10000;
+    min-width: 200px;
+    padding: 0 10px; }
+  .bio .basic-info {
+    padding: 0 10px;
+    min-width: 260px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+  .bio .basic-info * {
+    flex: 0; }
+  .bio .basic-info h1 {
+    display: block;
+    border-bottom: 2px solid white;
+    text-align: center; }
 
-.bio .basic-info {
-  display: inline-block;
-  width: 50%; }
+.basic-info-line .name {
+  float: left;
+  font-weight: bold; }
 
-h1 {
-  font-size: 1.25em;
-  margin: 0; }
-
-.page > * {
-  max-width: 700px;
-  margin: 0 auto; }
+.basic-info-line .value {
+  float: right; }
 
 .event {
   position: relative;
   display: flex;
-  margin: 40px 0;
-  align-items: baseline; }
+  margin-top: 40px;
+  align-items: baseline;
+  flex-wrap: wrap;
+  font-size: 0.95em; }
+  .event .content, .event .bio .description, .bio .event .description {
+    flex: 1;
+    flex-basis: 400px;
+    margin-top: 5px; }
 
 .event .date-range {
-  display: flex;
-  justify-content: center;
-  margin: 0 15px;
+  margin-right: 15px;
+  color: orange;
+  margin-bottom: 5px;
   flex: none; }
 
-.content {
-  letter-spacing: .05em;
-  line-height: 1.75em; }
+.education-block {
+  position: relative;
+  background: #334344;
+  color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
+
+.experience-block {
+  position: relative;
+  background: #0f314d;
+  color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  z-index: -1;
+  padding-bottom: 3em; }
+
+.projects-block {
+  position: relative;
+  background: #334344;
+  color: white;
+  z-index: -2; }
+
+.content, .bio .description {
+  letter-spacing: .02em;
+  line-height: 1.4em; }
+
+.menu-bar {
+  height: 2.5em;
+  box-shadow: 0 5px 10px 5px rgba(0, 0, 0, 0.19), 0 3px 4px rgba(0, 0, 0, 0.23);
+  background: #dddddd;
+  position: relative;
+  z-index: 2; }
+
+.fa {
+  padding: 0.5em;
+  min-width: 1em;
+  max-width: 1em;
+  height: 1em;
+  text-align: center;
+  text-decoration: none;
+  background: black;
+  color: white;
+  border-radius: 1em;
+  margin: 0.25em;
+  z-index: 4;
+  position: relative;
+  transition: transform 0.1s;
+  white-space: nowrap; }
+
+.fa:before {
+  z-index: 2;
+  position: relative; }
+
+.fa:hover {
+  transform: translateY(-2px); }
+
+.fa span:not(:empty):before {
+  content: '\A0\A0\A0\A0\A0\A0'; }
+
+.fa span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: inherit;
+  overflow: hidden;
+  height: 1em;
+  min-width: 1em;
+  max-width: 1em;
+  border-radius: 1em;
+  padding: 0.5em;
+  transition: max-width 0.9s, box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.4); }
+
+.fa:hover span {
+  display: initial;
+  max-width: 10em;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36); }
+
+.fa-github {
+  background: #24292e; }
+
+.fa-facebook {
+  background: #3B5998; }
+
+.fa-linkedin {
+  background: #0084bf; }
+
+.fa-globe {
+  background: #392e2e; }
+
+.content, .bio .description {
+  letter-spacing: .02em;
+  line-height: 1.4em; }
+
+body {
+  font-size: 20px;
+  font-family: 'Roboto Slab', serif; }
+
+.stars .filled {
+  fill: orange; }
+
+.stars .unfilled {
+  fill: white; }
+
+.content-row {
+  max-width: 700px;
+  padding: 1em;
+  margin: 0 auto; }
+
+.content-row > h1 {
+  text-align: center;
+  border-bottom: 2px solid; }
+
+a {
+  color: inherit; }
+
+h1 {
+  font-size: 1.25em;
+  margin: 0; }
 
 /*# sourceMappingURL=style.css.map*/
