--- a/style/event.scss
+++ b/style/event.scss
@@ -48,3 +48,40 @@
     z-index: 0;
 
 }
+
+[class^='tech-']:before {
+    background: white;
+    color: black;
+    border-radius: 0.25em;
+    padding: 1px 3px;
+    font-size: 0.75em;
+}
+
+.tech-react:before {
+    content: 'React.js'
+}
+.tech-c\+\+:before {
+    content: 'C++'
+}
+.tech-flask:before {
+    content: 'Flask'
+}
+
+.tech-peewee:before {
+    content: 'Peewee'
+}
+.tech-sql:before {
+    content: 'SQL'
+}
+
+.tech-android:before {
+    content: 'Android'
+}
+
+.tech-php:before {
+    content: 'PHP'
+}
+
+.tech-pdf\.js:before {
+    content: 'PDF.js'
+}
