--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?23419510');
-  src: url('../font/fontello.eot?23419510#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?23419510') format('woff2'),
-       url('../font/fontello.woff?23419510') format('woff'),
-       url('../font/fontello.ttf?23419510') format('truetype'),
-       url('../font/fontello.svg?23419510#fontello') format('svg');
+  src: url('../font/fontello.eot?75094104');
+  src: url('../font/fontello.eot?75094104#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?75094104') format('woff2'),
+       url('../font/fontello.woff?75094104') format('woff'),
+       url('../font/fontello.ttf?75094104') format('truetype'),
+       url('../font/fontello.svg?75094104#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?23419510#fontello') format('svg');
+    src: url('../font/fontello.svg?75094104#fontello') format('svg');
   }
 }
 */
@@ -29,7 +29,7 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-
+  
   text-align: center;
   /* opacity: .8; */
  
@@ -50,3 +50,4 @@
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-github:before { content: '\f09b'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-resume:before { content: '\f1c1'; } /* '' */
